# bizflow-integrations

./: MANIFEST.in  README.md  pyproject.toml  setup.py
bizflow_integrations/: hooks.py  modules.txt
bizflow_integrations/api/: exotel.py  facebook.py  google_ads.py  indiamart.py  tata_tele.py  website.py  whatsapp.py
bizflow_integrations/bizflow_integrations/: api.py
bizflow_integrations/bizflow_integrations/doctype/bizflow_website_settings/: bizflow_website_settings.json  bizflow_website_settings.py
bizflow_integrations/bizflow_integrations/doctype/exotel_call_log/: exotel_call_log.json  exotel_call_log.py
bizflow_integrations/bizflow_integrations/doctype/exotel_settings/: exotel_settings.json  exotel_settings.py
bizflow_integrations/bizflow_integrations/doctype/facebook_settings/: facebook_settings.json  facebook_settings.py
bizflow_integrations/bizflow_integrations/doctype/google_ads_settings/: google_ads_settings.json  google_ads_settings.py
bizflow_integrations/bizflow_integrations/doctype/indiamart_settings/: indiamart_settings.json  indiamart_settings.py
bizflow_integrations/bizflow_integrations/doctype/tata_tele_settings/: tata_tele_settings.json  tata_tele_settings.py
bizflow_integrations/bizflow_integrations/doctype/website_settings/: website_settings.json  website_settings.py
bizflow_integrations/bizflow_integrations/doctype/whatsapp_message_log/: whatsapp_message_log.json  whatsapp_message_log.py
bizflow_integrations/bizflow_integrations/doctype/whatsapp_settings/: whatsapp_settings.json  whatsapp_settings.py
